src/objects/Dev_ExaminationMaster_Obj__c.object
<CustomObject>
    <description>試験の情報を管理するオブジェクトです。
プレフィックス「EM」</description>
    <fields>
        <fullName>Dev_EM_BorderLine__c</fullName>
        <description>試験合格に必要な正解数を入力する項目です。</description>
        <label>合格ライン(%)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Dev_EM_ExamImplementation__c</fullName>
        <label>試験実施回数</label>
        <summaryForeignKey>Dev_ExamHistory_Obj__c.Dev_EH_TrialExam__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Dev_EM_ExamPassNum__c</fullName>
        <label>試験合格回数</label>
        <summaryFilterItems>
            <field>Dev_ExamHistory_Obj__c.Dev_EH_ExamResult__c</field>
            <operation>equals</operation>
            <value>合格</value>
        </summaryFilterItems>
        <summaryForeignKey>Dev_ExamHistory_Obj__c.Dev_EH_TrialExam__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Dev_EM_ExamTime__c</fullName>
        <description>試験時間を入力します。
分単位で入力してください。</description>
        <label>試験時間（分）</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dev_EM_PassRate__c</fullName>
        <formula>if( Dev_EM_ExamImplementation__c = 0 , 0 ,Dev_EM_ExamPassNum__c /  Dev_EM_ExamImplementation__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>合格率</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Dev_EM_QuestionNo__c</fullName>
        <description>試験の出題数を入力する項目です。</description>
        <label>出題数</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dev_EM_RegisteredQuestionSum__c</fullName>
        <label>問題数</label>
        <summaryForeignKey>Dev_Question_Obj__c.Dev_QU_ExaminationMaster__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Dev_EM_TransId__c</fullName>
        <externalId>true</externalId>
        <label>外部ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>試験マスタ</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>試験マスタ名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>